Atualização da aula de 21/08/23

--- a/src/app/view/cadastrar/cadastrar.page.html
+++ b/src/app/view/cadastrar/cadastrar.page.html
@@ -16,7 +16,7 @@
       <ion-input label="Nome" placeholder="Insira o nome" [(ngModel)]="nome"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input label="Email" placeholder="Insira o email" [(ngModel)]="email"></ion-input>
+      <ion-input label="Email" type="string" placeholder="Insira o email" [(ngModel)]="email"></ion-input>
     </ion-item>
     <ion-item>
       <ion-input label="Telefone" type="number" placeholder="Insira o telefone" [(ngModel)]="telefone"></ion-input>
