--- a/src/app/view/detalhar/detalhar.page.html
+++ b/src/app/view/detalhar/detalhar.page.html
@@ -7,24 +7,30 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-item>
+    <ion-toggle (ionChange)="habilitar()">Habilitar Edição</ion-toggle>
+  </ion-item>
     <ion-item>
-      <ion-input label="Nome" placeholder="Insira o nome" [(ngModel)]="nome"></ion-input>
+      <ion-input label="Nome" placeholder="Insira o nome" [(ngModel)]="nome" disabled="{{ edicao }}"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input label="Email" type="string" placeholder="Insira o email" [(ngModel)]="email"></ion-input>
+      <ion-input label="Email" type="string" placeholder="Insira o email" [(ngModel)]="email" disabled="{{ edicao }}"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input label="Telefone" type="number" placeholder="Insira o telefone" [(ngModel)]="telefone"></ion-input>
+      <ion-input label="Telefone" type="number" placeholder="Insira o telefone" [(ngModel)]="telefone" disabled="{{ edicao }}"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-select label="Gênero" placeholder="Selecione o gênero" [(ngModel)]="genero">
+      <ion-select label="Gênero" placeholder="Selecione o gênero" [(ngModel)]="genero" disabled="{{ edicao }}">
         <ion-select-option value="0">Masculino</ion-select-option>
         <ion-select-option value="1">Feminino</ion-select-option>
         <ion-select-option value="2">Prefiro não dizer</ion-select-option>
       </ion-select>
     </ion-item>
+
+    <ion-button expand="full" (click) = "editar()">Salvar</ion-button>
+    <ion-button expand="full" (click) = "excluir()" color="danger">Excluir</ion-button>
 
 </ion-content>
