--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -9,9 +9,10 @@
 
 <ion-content [fullscreen]="true">
 
-  <ion-list *ngFor="let contato of this.listaDeContatos; let i = index">
-  <ion-item (click)="editar(i)">
+  <ion-list *ngFor="let contato of this.listaDeContatos">
+  <ion-item>
      <ion-label>{{contato.nome}}</ion-label>
+     <ion-icon (click)="editar(contato)" class="3pontos" name="ellipsis-vertical-outline"></ion-icon>
   </ion-item>
   </ion-list>
 
