--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -11,8 +11,9 @@
 
   <ion-list *ngFor="let contato of this.listaDeContatos">
   <ion-item>
-     <ion-label>{{contato.nome}}</ion-label>
-     <ion-icon (click)="editar(contato)" class="3pontos" name="ellipsis-vertical-outline"></ion-icon>
+    <ion-avatar><img src="{{contato.downloadURL}}"></ion-avatar>
+    <ion-label>{{contato.nome}}</ion-label>
+    <ion-icon (click)="editar(contato)" class="3pontos" name="ellipsis-vertical-outline"></ion-icon>
   </ion-item>
   </ion-list>
 
