--- a/src/app/view/Contato/cadastrar/cadastrar.page.html
+++ b/src/app/view/Contato/cadastrar/cadastrar.page.html
@@ -1,15 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Cadastrar</ion-title>
+    <ion-title id="titulo">
+      Cadastrar
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Cadastrar</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
   <ion-list>
     <ion-item>
