--- a/src/app/view/Contato/home/home.page.html
+++ b/src/app/view/Contato/home/home.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
 
   <ion-list *ngFor="let contato of this.listaDeContatos">
   <ion-item>
