Tela de cadstro

--- a/src/app/view/usuario/login/login.page.html
+++ b/src/app/view/usuario/login/login.page.html
@@ -12,8 +12,8 @@
         <ion-input type="email" formControlName="email" placeholder="Insira seu E-mail"></ion-input>
       </ion-item>
       <!--Mensagens de erro-->
-      <span *ngIf="logar.get('email')?.touched && logar.get('email')?.errors?.['required']">Email é obrigatório!</span>
-      <span *ngIf="logar.get('email')?.dirty && logar.get('email')?.errors?.['email']">Formato de email inválido</span>
+      <span *ngIf="logar.get('email')?.touched && logar.get('email')?.errors?.['required']">E-mail é obrigatório!</span>
+      <span *ngIf="logar.get('email')?.dirty && logar.get('email')?.errors?.['email']">Formato de E-mail inválido</span>
       <!--Mensagens de erro-->
       <ion-item>
         <ion-label position="floating">Senha</ion-label>
